--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "12"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.13"
-pydantic = "^2.11.7"
+pydantic = {extras = ["email"], version = "^2.11.7"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 pydantic-settings = "^2.10.0"
 asyncpg = "^0.30.0"
