--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^25.1.0"
 pylint = "^3.3.7"
 isort = "^6.0.1"
 alembic = "^1.16.2"
+faker = "^37.4.0"
 
 [build-system]
 requires = ["poetry-core"]
