--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 pydantic-settings = "^2.10.0"
 asyncpg = "^0.30.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pyjwt = {extras = ["crypto"], version = "^2.10.1"}
+bcrypt = "^4.3.0"
+python-multipart = "^0.0.20"
 
 
 [tool.poetry.group.dev.dependencies]
