--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,10 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  # redis:
-  #   image: redis:7
-  #   ports:
-  #     - "6379:6379"
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
 
   # api:
   #   build: .
