--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pyjwt = {extras = ["crypto"], version = "^2.10.1"}
 bcrypt = "^4.3.0"
 python-multipart = "^0.0.20"
+redis = "^6.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
