--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pyjwt = {extras = ["crypto"], version = "^2.10.1"}
 bcrypt = "^4.3.0"
 python-multipart = "^0.0.20"
 redis = "^6.2.0"
+celery = "^5.5.3"
 
 
 [tool.poetry.group.dev.dependencies]
