--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ bcrypt = "^4.3.0"
 python-multipart = "^0.0.20"
 redis = "^6.2.0"
 celery = "^5.5.3"
+taskiq = "^0.11.17"
+aiosmtplib = "^4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
