--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ redis = "^6.2.0"
 celery = "^5.5.3"
 taskiq = "^0.11.17"
 aiosmtplib = "^4.0.1"
+pika = "^1.3.2"
+pika-stubs = "^0.1.3"
+taskiq-aio-pika = "^0.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
