--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
 version: "3.9"
 
 services:
+  # db:
+  #   image: postgres:16
+  #   container_name: postgres-db
+  #   env_file: .env
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - pgdata:/var/lib/postgresql/data
+
+
+    #test
   db:
     image: postgres:16
-    container_name: postgres-db
-    env_file: .env
+    container_name: test-db
+    env_file: .env.test
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -12,7 +27,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   redis:
     image: redis:7
@@ -69,26 +84,34 @@ services:
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
 
-  api:
-    build: .
-    container_name: fastapi-app
-    depends_on:
-      - db
-      - redis
-      - maildev
-      - rabbitmq
-      # - flower
-      # - celery
-    ports:
-      - "8000:8000"
-    env_file: .env
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_SERVER: ${POSTGRES_SERVER}
-      POSTGRES_DB: ${POSTGRES_DB}
-      REDIS_HOST: ${REDIS_HOST}
-      REDIS_PORT: ${REDIS_PORT}
+  # api:
+  #   build: .
+  #   container_name: fastapi-app
+  #   depends_on:
+  #     - db
+  #     - redis
+  #     - maildev
+  #     - rabbitmq
+  #     # - flower
+  #     # - celery
+  #   ports:
+  #     - "8000:8000"
+  #   env_file: .env
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_SERVER: ${POSTGRES_SERVER}
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #     REDIS_HOST: ${REDIS_HOST}
+  #     REDIS_PORT: ${REDIS_PORT}
+  #   command: >
+  #     gunicorn app.main:main_app
+  #     --workers 2
+  #     --worker-class uvicorn.workers.UvicornWorker
+  #     --bind 0.0.0.0:8000
+  #     --log-level info 
+  #     --access-logfile - 
+  #     --error-logfile -
 
 volumes:
   pgdata:
