--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ aiosmtplib = "^4.0.1"
 pika = "^1.3.2"
 pika-stubs = "^0.1.3"
 taskiq-aio-pika = "^0.4.3"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -34,6 +35,8 @@ pylint = "^3.3.7"
 isort = "^6.0.1"
 alembic = "^1.16.2"
 faker = "^37.4.0"
+pytest-asyncio = "^1.1.0"
+httpx = "^0.28.1"
 
 [build-system]
 requires = ["poetry-core"]
