--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,8 @@
-PROJECT_NAME=MyProjectTest
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_SERVER=test-db
-POSTGRES_PORT=5432
-POSTGRES_DB=your_db_name_test
-
-REDIS_HOST=localhost
-REDIS_PORT=6379
+POSTGRES_USER=test_user
+POSTGRES_PASSWORD=test_password
+POSTGRES_DB=test_db
+POSTGRES_PORT="5432"
+PROJECT_NAME=test_Mini_CRM
+POSTGRES_SERVER=test_db
+REDIS_HOST=redis
+REDIS_PORT="6379"
