--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,10 @@
 version: "3.9"
 
 services:
-  # db:
-  #   image: postgres:16
-  #   container_name: postgres-db
-  #   env_file: .env
-  #   environment:
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - pgdata:/var/lib/postgresql/data
-
-
-    #test
   db:
     image: postgres:16
-    container_name: test-db
-    env_file: .env.test
+    container_name: postgres-db
+    env_file: .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -27,14 +12,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
 
   redis:
     image: redis:7
     container_name: redis-server
     ports:
       - "6379:6379"
-  
+
   maildev:
     image: maildev/maildev
     container_name: maildev
@@ -84,36 +69,37 @@ services:
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
 
-  # api:
-  #   build: .
-  #   container_name: fastapi-app
-  #   depends_on:
-  #     - db
-  #     - redis
-  #     - maildev
-  #     - rabbitmq
-  #     # - flower
-  #     # - celery
-  #   ports:
-  #     - "8000:8000"
-  #   env_file: .env
-  #   environment:
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #     POSTGRES_SERVER: ${POSTGRES_SERVER}
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #     REDIS_HOST: ${REDIS_HOST}
-  #     REDIS_PORT: ${REDIS_PORT}
-  #   command: >
-  #     gunicorn app.main:main_app
-  #     --workers 2
-  #     --worker-class uvicorn.workers.UvicornWorker
-  #     --bind 0.0.0.0:8000
-  #     --log-level info 
-  #     --access-logfile - 
-  #     --error-logfile -
+  api:
+    build: .
+    container_name: fastapi-app
+    depends_on:
+      - db
+      - redis
+      - maildev
+      - rabbitmq
+
+      # - celery
+      # - flower
+      # - celery
+    ports:
+      - "8000:8000"
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_SERVER: ${POSTGRES_SERVER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+    # command: >
+    #   gunicorn app.main:main_app
+    #   --workers 2
+    #   --worker-class uvicorn.workers.UvicornWorker
+    #   --bind 0.0.0.0:8000
+    #   --log-level info
+    #   --access-logfile -
+    #   --error-logfile -
 
 volumes:
   pgdata:
   rabbitmq-data:
-
