--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pika = "^1.3.2"
 pika-stubs = "^0.1.3"
 taskiq-aio-pika = "^0.4.3"
 gunicorn = "^23.0.0"
+greenlet = "^3.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -37,7 +38,9 @@ alembic = "^1.16.2"
 faker = "^37.4.0"
 pytest-asyncio = "^1.1.0"
 httpx = "^0.28.1"
+psycopg2-binary = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
