--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   }
